--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,31 +1,22 @@
-appdirs==1.4.4
-CacheControl==0.12.6
+anyio==3.6.1
+asgiref==3.5.2
+bcrypt==3.2.2
 cffi==1.15.0
-chardet==4.0.0
-colorama==0.4.4
-contextlib2==0.6.0.post1
-cryptography==37.0.0
-distlib==0.3.4
-distro==1.7.0
-html5lib==1.1
+click==8.1.3
+cryptography==37.0.2
+ecdsa==0.17.0
+fastapi==0.78.0
+h11==0.13.0
 idna==3.3
-more-itertools==8.12.0
-msgpack==1.0.3
-nodeenv==1.6.0
-ordered-set==4.0.2
-packaging==21.3
-pep517==0.12.0
-ply==3.11
-progress==1.6
+passlib==1.7.4
+pyasn1==0.4.8
 pycparser==2.21
-pyOpenSSL==22.0.0
-pyparsing==3.0.9
-requests==2.27.1
-resolvelib==0.5.5
-retrying==1.3.3
+pydantic==1.9.1
+python-jose==3.3.0
+python-multipart==0.0.5
+rsa==4.8
 six==1.16.0
-team==1.0
-toml==0.10.2
-tomli==2.0.1
-urllib3==1.26.9
-webencodings==0.5.1
+sniffio==1.2.0
+starlette==0.19.1
+typing_extensions==4.2.0
+uvicorn==0.17.6
