--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,8 @@ fastapi==0.78.0
 greenlet==1.1.2
 h11==0.13.0
 idna==3.3
+mypy==0.960
+mypy-extensions==0.4.3
 numpy==1.22.4
 pandas==1.4.2
 passlib==1.7.4
@@ -24,5 +26,6 @@ six==1.16.0
 sniffio==1.2.0
 SQLAlchemy==1.4.36
 starlette==0.19.1
+tomli==2.0.1
 typing_extensions==4.2.0
 uvicorn==0.17.6
