--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,22 +1,31 @@
 anyio==3.6.1
 asgiref==3.5.2
+attrs==21.4.0
 bcrypt==3.2.2
 cffi==1.15.0
 click==8.1.3
+coverage==6.4.1
 cryptography==37.0.2
 ecdsa==0.17.0
 fastapi==0.78.0
 greenlet==1.1.2
 h11==0.13.0
 idna==3.3
+iniconfig==1.1.1
 mypy==0.960
 mypy-extensions==0.4.3
 numpy==1.22.4
+packaging==21.3
 pandas==1.4.2
 passlib==1.7.4
+pluggy==1.0.0
+py==1.11.0
 pyasn1==0.4.8
 pycparser==2.21
 pydantic==1.9.1
+pyparsing==3.0.9
+pytest==7.1.2
+pytest-asyncio==0.18.3
 python-dateutil==2.8.2
 python-jose==3.3.0
 python-multipart==0.0.5
